# lumina-remote

./: .gitignore  Cargo.toml  README.md  README.ru.md  README.uk.md
.github/workflows/: release.yml
client/lumina-capture/: Cargo.toml
client/lumina-capture/src/: diff.rs  frame.rs  lib.rs  linux_capture.rs  mac_capture.rs  win_capture.rs  xcap_capture.rs
client/lumina-encoder/: Cargo.toml
client/lumina-encoder/src/: lib.rs  qos.rs
client/lumina-input/: Cargo.toml
client/lumina-input/src/: lib.rs
client/lumina-poc/src/: main.rs
client/lumina-ui/: package-lock.json  package.json
client/lumina-ui/src/: App.tsx  index.css
client/lumina-ui/src-tauri/: Cargo.toml  tauri.conf.json
client/lumina-ui/src-tauri/src/: lib.rs  main.rs
client/lumina-ui/src/hooks/: useScramble.ts
crates/lumina-capture/: Cargo.toml
crates/lumina-capture/src/: lib.rs
crates/lumina-core/src/: lib.rs
crates/lumina-encoder/: Cargo.toml
crates/lumina-input/: Cargo.toml
crates/lumina-network/: Cargo.toml
crates/lumina-network/src/: lib.rs
crates/lumina-poc/: Cargo.toml
crates/lumina-poc/src/: main.rs
crates/lumina-protocol/: Cargo.toml
crates/lumina-signal-server/: Cargo.toml
docs/en/: ARCHITECTURE.md  MVP-BACKLOG.md
docs/ru/: ARCHITECTURE.md  MVP-BACKLOG.md  tech_spec.md
docs/uk/: ARCHITECTURE.md  MVP-BACKLOG.md
server/: Makefile  README.md  deploy.sh  docker-compose.yml  init-letsencrypt.sh
server/lumina-relay-server/: Cargo.toml
server/lumina-relay-server/src/: main.rs
server/lumina-signal-server/: Dockerfile  docker-compose.yml
server/lumina-signal-server/src/: main.rs
server/nginx/: app.conf
shared/lumina-core/: Cargo.toml
shared/lumina-network/: Cargo.toml
shared/lumina-network/src/: crypto.rs  handshake.rs  lib.rs  manager.rs  mdns_discovery.rs  nat.rs  signaling.rs
shared/lumina-protocol/: Cargo.toml
shared/lumina-protocol/src/: lib.rs
