[workspace]
resolver = "2"
members = [
    "client/lumina-poc",
    "client/lumina-capture",
    "client/lumina-encoder",
    "client/lumina-input",
    "client/lumina-ui/src-tauri",
    "server/*",
    "shared/*"
]
[workspace.dependencies]
tokio = { version = "1.32", features = ["full"] }
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
argon2 = "0.5"
mdns = "3.0"
