[workspace]
resolver = "2"
members = [
    "client/lumina-poc",
    "client/lumina-capture",
    "client/lumina-encoder",
    "client/lumina-input",
    "client/lumina-ui/src-tauri",
    "server/lumina-signal-server",
    "server/lumina-relay-server",
    "shared/*"
]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
