[package]
name = "lumina-encoder"
version = "0.1.0"
edition = "2021"

[dependencies]
lumina-capture = { path = "../lumina-capture" }
lumina-protocol = { path = "../../shared/lumina-protocol" }

[target.'cfg(target_os = "macos")'.dependencies]
video-toolbox = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_Foundation"
] }


