[package]
name = "lumina-network"
version = "0.1.0"
edition = "2021"

[dependencies]
lumina-core = { path = "../lumina-core" }
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration", "quic"] }
rcgen = "0.11"
tokio = { version = "1.32", features = ["full"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
url = "2.5.8"
stun = "0.17.1"
mdns-sd = "0.20.0"
tracing = "0.1.44"
