[package]
name = "lumina-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lumina_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lumina-core = { path = "../../../shared/lumina-core" }
lumina-network = { path = "../../../shared/lumina-network" }
rand = "0.8"
tokio = { version = "1.32", features = ["full"] }
lumina-capture = { path = "../../lumina-capture" }
lumina-input = { path = "../../lumina-input" }
lumina-encoder = { path = "../../lumina-encoder" }
image = "0.24"
lazy_static = "1.4"
base64 = "0.21"
futures-util = "0.3.32"
tokio-tungstenite = "0.29.0"
